# ACG

./: .gitignore  CMakeLists.txt  camera.h  colour.h  compound_material.cpp  compound_material.h  csg_object.cpp  csg_object.h  directional_light.cpp  directional_light.h  environment.h  falsecolour_material.cpp  falsecolour_material.h  framebuffer.cpp  framebuffer.h  full_camera.cpp  full_camera.h  global_material.cpp  global_material.h  hit.cpp  hit.h  light.h  linedrawer.cpp  linedrawer_int.cpp  main.cpp  main_lab1.cpp  main_lab2.cpp  main_lab34.cpp  material.h  object.h  phong_material.cpp  phong_material.h  phong_material_photon_mapping.cpp  phong_material_photon_mapping.h  photon.cpp  photon.h  photon_map.cpp  photon_map.h  plane_object.cpp  plane_object.h  (+18 more)
alglib/: alglibmisc.cpp  alglibmisc.h  ap.cpp  ap.h
